fix dropdown icon height shift

--- a/src/components/top8/DropDownSelect/DropDownSelect.module.scss
+++ b/src/components/top8/DropDownSelect/DropDownSelect.module.scss
@@ -38,6 +38,7 @@
     display: flex;
     align-items: center;
     gap: 6px;
+    min-height: 24px;
   }
 
   .icon {
